Integrate `ui-tachyons-dark`

--- a/src/app/preview-head.html
+++ b/src/app/preview-head.html
@@ -1,4 +1,7 @@
 <script>
-  document.body.classList
-    .add('bg-background-100')
+setTimeout(() => {
+  document.body.classList.add('text-normal-100')
+  document.body.classList.add('bg-background-100')
+  document.body.classList.add('sans-serif')
+}, 0)
 </script>
