--- a/src/app/preview-head.html
+++ b/src/app/preview-head.html
@@ -3,5 +3,6 @@ setTimeout(() => {
   document.body.classList.add('text-normal-100')
   document.body.classList.add('bg-background-100')
   document.body.classList.add('sans-serif')
+  document.body.style.fontSize = '0px'
 }, 0)
 </script>
